jilles      2006/08/01 22:49:57 UTC	(20060801-6009)
  Log:
  ok xmlrpc hack should work finally
  

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2006/08/01 22:48:28 UTC	(20060801-6007)
  Log:
  Incorrect hack, another try.
  

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2006/08/01 22:23:17 UTC	(20060801-6005)
  Log:
  Hack for multiple packets...
  

  Changes:	Modified:
  +6 -0		trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2006/08/01 21:18:22 UTC	(20060801-6003)
  Log:
  find_service(): if nick@server or user@server format is
  used, require the server name to be our server name
  (don't allow jupes).
  

  Changes:	Modified:
  +5 -1		trunk/src/servtree.c (File Modified) 


jilles      2006/08/01 21:07:23 UTC	(20060801-6001)
  Log:
  Use DICTIONARY_FOREACH in joinall() and find_service().
  

  Changes:	Modified:
  +5 -9		trunk/src/services.c (File Modified) 
  +6 -14	trunk/src/servtree.c (File Modified) 


jilles      2006/08/01 20:49:40 UTC	(20060801-5999)
  Log:
  Enable Id expansion.
  

  Changes:	Modified:
  + -		trunk/src/ctcp-common.c  (Property Modified)


jilles      2006/08/01 20:41:37 UTC	(20060801-5997)
  Log:
  Remove dictionary_set_compare_func() and instead take the
  comparison function from an extra argument to
  dictionary_create(). This prevents run-time changes to
  the comparison function possibly causing duplicates
  and crashes, and forces the user to think about the
  comparison function when creating a dictionary tree.
  CTCPs are now properly case sensitive.
  

  Changes:	Modified:
  +3 -8		trunk/include/dictionary.h (File Modified) 
  +1 -1		trunk/src/ctcp-common.c (File Modified) 
  +2 -8		trunk/src/dictionary.c (File Modified) 
  +2 -4		trunk/src/node.c (File Modified) 
  +1 -1		trunk/src/servtree.c (File Modified) 


jilles      2006/08/01 19:25:51 UTC	(20060801-5995)
  Log:
  Fix compiler warning.
  

  Changes:	Modified: